# genieutils-py

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  test
.github/workflows/: python-lib.yml
src/: attackorarmor.py  bird.py  building.py  buildingannex.py  buildingconnection.py  civ.py  common.py  creatable.py  damagegraphic.py  datfile.py  deadfish.py  effect.py  effectcommand.py  framedata.py  graphic.py  graphicanglesound.py  graphicdelta.py  mapelevation.py  mapinfo.py  mapland.py  mapterrain.py  mapunit.py  playercolour.py  projectile.py  randommaps.py  researchconnection.py  researchresourcecost.py  resourcecost.py  resourcestorage.py  sound.py  sounditem.py  task.py  tech.py  techtree.py  techtreeage.py  techtreecommon.py  terrain.py  terrainblock.py  terrainpassgraphic.py  terrainrestriction.py  (+5 more)
src/genieutils/: civ.py  common.py  datatypes.py  datfile.py  effect.py  graphic.py  playercolour.py  randommaps.py  scripts.py  sound.py  task.py  tech.py  techtree.py  terrainblock.py  terrainrestriction.py  unit.py  unitheaders.py  versions.py
tests/: test_common.py  test_dat_compatibility.py  test_lengths.py
