[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genieutils"]

[project]
name = "genieutils-py"
version = "0.0.9"
authors = [
    { name = "SiegeEngineers", email = "genieutils@siegeengineers.org" },
]
description = "Re-implementation of genieutils in Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SiegeEngineers/genieutils-py"
Issues = "https://github.com/SiegeEngineers/genieutils-py/issues"

[project.scripts]
dat-to-json = "genieutils.scripts:dat_to_json"

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ['tests/*']
